# orcas-demo

./: .gitignore  pyproject.toml  sqlite.db
src/: database.py  main.py
src/clientes/: models.py  routes.py  schemas.py
src/orcamentos/: models.py  routes.py  schemas.py
src/produtos/: models.py  routes.py  schemas.py
